syntax = "proto3";

package order;

option go_package = "order";

import "cart.proto";

message OrderItem {
    cart.CartItem item = 1;
    float cost = 2;
}

message Address {
    string street = 1;
    string city = 2;
    string state = 3;
    string country = 4;
    string zip = 5;
}

message PlaceOrderReq {
    uint32 user_id = 1;
    string currency = 2;
    Address address = 3;
    string email = 4;
    repeated OrderItem items = 5;
}

message OrderResult{
    string order_id = 1;
}

message Order {
    repeated OrderItem items = 1;
    string order_id = 2;
    uint32 user_id = 3;
    string currency = 4;
    Address address = 5;
    string email = 6;
    int32 created_at = 7;
}

message PlaceOrderResp {
    OrderResult order = 1;
}

message ListOrdersReq {
    uint32 user_id = 1;
}

message ListOrdersResp {
    repeated Order orders = 1;
}


service OrderService {
    rpc PlaceOrder(PlaceOrderReq) returns (PlaceOrderResp) {
    }
    rpc ListOrders(ListOrdersReq) returns (ListOrdersResp) {
    }
}