syntax = "proto3";

package payment;

option go_package = "payment";

message CreditCard {
    string id = 1;
    int32 cvv = 2;
    int32 expiration_year = 3;
    int32 expiration_month = 4;
}

message ChargeReq { 
    float amount = 1;
    CreditCard card = 2;
    string order_id = 3;
    uint32 user_id = 4;
}

message ChargeResp {
    string transaction_id = 1;
}

service PaymentService {
  rpc Charge(ChargeReq) returns (ChargeResp) {
  }
}